--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,7 @@ endif()
 
 if(CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
 	target_compile_options(${LIB_NAME} PUBLIC "-ffree-line-length-none")
+	target_compile_definitions(${LIB_NAME} PRIVATE "-DGFORTRAN")
 elseif(CMAKE_Fortran_COMPILER_ID MATCHES "NAG")
 	target_compile_definitions(${LIB_NAME} PRIVATE "-DNAG")
 elseif(CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
